I've been working hard on my project nearly every single day for the past two and a half weeks, but I haven't committed each series of daily changes to GitHub because I wanted to wait until I was done making changes on my home computer. Sorry about that. Anyway, during the time, some things I accomplished include completing the questions and possible song choices, tons of code tidying, and embedding Spotify links into the results screen. I need to figure out a nice layout for the result screen next

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <!-- Favicon image source: https://media.istockphoto.com/id/1314225137/vector/jam-listening-to-music-vector-illustration.jpg?s=612x612&w=0&k=20&c=jpzgwzOln8_Gw25MEd7tspVXqi4BG2W881Wx5r_2ciA= -->
+    <!-- Favicon image credit: Pedro Fernandes at https://www.istockphoto.com/ -->
+    <!-- https://www.remove.bg/ removed background -->
+    <link rel="icon" href="music-jam.png">
+
     <!-- Linking to the main p5.js library, which allows your code to use all 
        p5 functions. Using this version while developing your code allows p5 
        to provide more Friendly Error Messages if you mess something up...-->
@@ -24,5 +29,6 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script></script>
   </body>
 </html>
