--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Which 2023 Song Is Your Jam?</title>
-
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- Favicon image source: https://media.istockphoto.com/id/1314225137/vector/jam-listening-to-music-vector-illustration.jpg?s=612x612&w=0&k=20&c=jpzgwzOln8_Gw25MEd7tspVXqi4BG2W881Wx5r_2ciA= -->
@@ -16,14 +14,13 @@
     <!-- Linking to the main p5.js library, which allows your code to use all 
        p5 functions. Using this version while developing your code allows p5 
        to provide more Friendly Error Messages if you mess something up...-->
-    <script src="libraries/p5.js"></script>
+    <!-- <script src="libraries/p5.js"></script> -->
 
     <!-- Once your project is working completely, you can comment out the link
        to p5.js above, and instead link to this minified version. The minified
        version takes less space, and turns off Friendly Error Messages. This 
        increases the speed of your program quite dramatically in some cases.-->
-    <!-- <script src="libraries/p5.min.js"></script> -->
-
+    <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
